compute-dummy/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compute-dummy-svc
  labels:
    app: compute-dummy
spec:
  selector:
    app: compute-dummy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
